添加注解模块

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,12 +37,14 @@ GSON_VERSION=2.8.0
 SONIC_VERSION=3.0.0
 AGENT_WEB_VERSION=4.0.2
 CHART_VERSION=v3.1.0-alpha
-MATISSE_VERSION = 0.5.1
-PICKER_VIEW_VERSION = 4.1.6
-INDICATOR_VIEW_VERSION = 1.0.0
+MATISSE_VERSION=0.5.1
+PICKER_VIEW_VERSION=4.1.6
+INDICATOR_VIEW_VERSION=1.0.0
 
-RX_JAVA_VERSION = 2.1.8
-RX_ANDROID_VERSION = 2.0.1
+RX_JAVA_VERSION=2.1.8
+RX_ANDROID_VERSION=2.0.1
 
-FLOW_LAYOUT_VERSION = 1.1.2
+FLOW_LAYOUT_VERSION=1.1.2
+AUTO_SERVICE_VERSION=1.0-rc2
+JAVAPOET_VERSION=1.11.1
 
