--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
     implementation deps.android.v7
     implementation deps.project.lib_runtime
     implementation deps.tools.butterknife
+    implementation deps.project.lib_annotation
+    implementation deps.project.lib_annotation_api
     annotationProcessor deps.processor.butterknife_apt
+    annotationProcessor deps.processor.lego_apt
 }
