--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ BUILD_TOOLS_VERSION=28.0.2
 COMPILE_SDK_VERSION=28
 MIN_SDK_VERISON=21
 TARGET_SDK_VERSION=28
+ANDROID_GRADLE_TOOLS_VERSION=3.1.2
 
 # Dependencies
 V4=28.0.0
@@ -36,10 +37,10 @@ DEBUG_DB_VERSION=1.0.4
 GSON_VERSION=2.8.0
 SONIC_VERSION=3.0.0
 AGENT_WEB_VERSION=4.0.2
-CHART_VERSION=v3.1.0-alpha
 MATISSE_VERSION=0.5.1
 PICKER_VIEW_VERSION=4.1.6
 INDICATOR_VIEW_VERSION=1.0.0
+KOTLIN_VERSION=1.2.30
 
 RX_JAVA_VERSION=2.1.8
 RX_ANDROID_VERSION=2.0.1
@@ -47,4 +48,12 @@ RX_ANDROID_VERSION=2.0.1
 FLOW_LAYOUT_VERSION=1.1.2
 AUTO_SERVICE_VERSION=1.0-rc2
 JAVAPOET_VERSION=1.11.1
+JAVASSIST_VERSION=3.12.1.GA
+EVENT_BUS=3.0.0
+
+# 本地Maven仓库地址，相对于项目根目录
+LOCAL_MAVEN=/local-maven
+# 使用本地Maven依赖的项目版本号
+PANGA_PLUGIN_VERSION=1.0.0
+ANNOTATION_VERSION=1.0.1
 
