--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ include ':app'
 
 rootProject.name = "SimpleAndroid"
 
+def useSource = false
+
 def deps = [:]
 
 def android = [
@@ -12,7 +14,8 @@ def android = [
         paging      : "android.arch.paging:runtime:${PAGING_VERSION}",
         lifecycle   : "android.arch.lifecycle:extensions:${LIFECYCLE_VERSION}",
         db_room     : "android.arch.persistence.room:runtime:${DB_ROOM_VERSION}",
-        annotation  : "com.android.support:support-annotations:${ANNOTATION}"
+        annotation  : "com.android.support:support-annotations:${ANNOTATION}",
+        gradle_tools: "com.android.tools.build:gradle:${ANDROID_GRADLE_TOOLS_VERSION}"
 ]
 
 def tools = [
@@ -22,7 +25,6 @@ def tools = [
         retrofit_convert_gson: "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}",
         okhttp_logging       : "com.squareup.okhttp3:logging-interceptor:${OK_HTTP_VERSION}",
         gson                 : "com.google.code.gson:gson:${GSON_VERSION}",
-        chart                : "com.github.PhilJay:MPAndroidChart:${CHART_VERSION}",
         sonic                : "com.tencent.sonic:sdk:${SONIC_VERSION}",
         agentweb             : "com.just.agentweb:agentweb:${AGENT_WEB_VERSION}",
         rxjava               : "io.reactivex.rxjava2:rxjava:${RX_JAVA_VERSION}",
@@ -32,7 +34,10 @@ def tools = [
         picker_view          : "com.contrarywind:Android-PickerView:${PICKER_VIEW_VERSION}",
         indicator_view       : "com.romandanylyk:pageindicatorview:${INDICATOR_VIEW_VERSION}",
         auto_service         : "com.google.auto.service:auto-service:${AUTO_SERVICE_VERSION}",
-        javapoet             : "com.squareup:javapoet:${JAVAPOET_VERSION}"
+        javapoet             : "com.squareup:javapoet:${JAVAPOET_VERSION}",
+        javassist            : "javassist:javassist:${JAVASSIST_VERSION}",
+        event_bus            : "org.greenrobot:eventbus:${EVENT_BUS}",
+        fastjson             : "com.alibaba:fastjson:1.2.49"
 ]
 
 def project = [
@@ -50,7 +55,8 @@ def project = [
         lib_splash        : includeProject(":lego:lib-splash"),
         lib_payment       : includeProject(":lego:lib-payment"),
         lib_debug         : includeProject(":lego:lib-debug"),
-        lib_annotation    : includeProject(":lego:lib-annotation"),
+        lib_annotation    : useSource ? includeProject(":lego:lib-annotation") :
+                "com.neuqer.android:annotation:${ANNOTATION_VERSION}",
         lib_annotation_api: includeProject(":lego:lib-annotation-api")
 ]
 
@@ -58,6 +64,7 @@ def processor = [
         butterknife_apt: "com.jakewharton:butterknife-compiler:${BUTTER_KNIFE}",
         glide_apt      : "com.github.bumptech.glide:compiler:${GLIDE_VERSION}",
         db_room_apt    : "android.arch.persistence.room:compiler:${DB_ROOM_VERSION}",
+        event_bus_apt  : "org.greenrobot:eventbus-annotation-processor:${EVENT_BUS}",
         lego_apt       : includeProject(":lego:lib-annotation-processor")
 ]
 
@@ -65,11 +72,21 @@ def debug = [
         debug_db: "com.amitshekhar.android:debug-db:${DEBUG_DB_VERSION}"
 ]
 
+def plugin = [
+        ioc_di: includeProject(":lego:gradle-plugins:panga")
+]
+
+def kotlin = [
+        "core": "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${KOTLIN_VERSION}"
+]
+
 deps.android = android
 deps.tools = tools
 deps.project = project
 deps.processor = processor
 deps.debug = debug
+deps.plugin = plugin
+deps.kotlin = kotlin
 
 def includeProject(def projectPath) {
     include projectPath
