--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.neuqer.panga'
+apply plugin: 'com.neuqer.gather'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -54,6 +55,8 @@ dependencies {
     implementation deps.tools.butterknife
     implementation deps.project.lib_annotation
     implementation deps.project.lib_annotation_api
+    implementation deps.project.lib_network
+    implementation deps.project.lib_scheme
     annotationProcessor deps.processor.butterknife_apt
     annotationProcessor deps.processor.lego_apt
 }
