--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,7 @@ EVENT_BUS=3.0.0
 LOCAL_MAVEN=/local-maven
 # 使用本地Maven依赖的项目版本号
 PANGA_PLUGIN_VERSION=1.0.0
+GATHER_PLUGIN_VERSION=1.0.0
 ANNOTATION_VERSION=1.0.1
 RUNTIME_VERSION=1.0.0
 
